[tool.poetry]
name = "sploty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.2"
spotipy = "^2.23.0"
elasticsearch = "^8.13.1"
tinydb = "^4.8.0"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD", "FIX", "PD901"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
