[project]
name = "sploty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.15.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.6.0",
    "requests>=2.32.3",
    "spotipy>=2.24.0",
    "tinydb>=4.8.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD", "FIX", "PD901"]

[build-system]
# uv does not provide a build backend yet
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sploty = "sploty.app:main"
